--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-create a index page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=10, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>hello GitHub</div>
+</body>
+</html>
